--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,7 +1,18 @@
-<a href="/">Home</a>
-<a href="/about/">About</a>
-<a href="/blog/">Blog</a>
-
-<h1>About Me</h1>
-<h1>My Astro Learning Blog</h1>
-  <p>This is where I will post about my journey learning Astro.</p>
+---
+import BaseLayout from "../layouts/Baselayout.astro";
+import BlogPost from "../components/blogpost.astro";
+const allPosts = Object.values(
+    import.meta.glob("./posts/*.md", { eager: true }),
+);
+const pageTitle = "My Astro Learning Blog";
+---
+<BaseLayout pageTitle={pageTitle}>
+    <p>This is where I will post about my journey learning Astro.</p>
+    <ul>
+        {
+            allPosts.map((post: any) => (
+                <BlogPost url={post.url} title={post.frontmatter.title} />
+            ))
+        }
+    </ul>
+</BaseLayout>
