--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,9 @@
 ---
+import BaseLayout from '../layouts/Baselayout.astro';
+import Greeting from '../components/greeting';
+const pageTitle = "Home Page";
 ---
-
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} >
-    <title>Astro</title>
-  </head>
-  <body>
-    <h1>Astro</h1>
-	<h2>My Astro Site</h2>
-  <p>hgjhjh</p>
-  </body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+  <h2>My awesome blog subtitle</h2>
+  <Greeting client:load messages={["Hej", "Hallo", "Hola", "Habari"]} />
+</BaseLayout>
